--- a/src/components/Techs/components/TechItem.css
+++ b/src/components/Techs/components/TechItem.css
@@ -5,15 +5,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 90px;
-  min-height: 60px;
   font-size: 14px;
 }
 
 @media screen and (max-width: 1024px) {
   .techs__item {
-    min-width: 84px;
-    min-height: 57px;
     font-size: 12px;
   }
 }
